parameterized testing for input text files